listen socket for new patterns

--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-stream": "^6.1.0"
+  },
+  "dependencies": {
+    "socket.io-client": "^4.3.2"
   }
 }
